add or update units commit

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -58,5 +58,13 @@
   "add_bill": "إضافة فاتورة",
   "bills": "فواتير",
   "more": "المزيد",
-  "settings": "الإعدادات"
+  "settings": "الإعدادات",
+  "add_new_unit": "إضافة وحدة جديدة",
+  "units": "الوحدات",
+  "unit_name": "إسم الوحدة",
+  "add": "إضافة",
+  "update": "تعديل",
+  "paid": "المدفوع",
+  "remaining": "المتبقي",
+  "in_debt": "المديونية"
 }
