warehouse and add product commit

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -72,8 +72,22 @@
   "add_new_supplier": "إضافة مورد جديد",
   "update_supplier": "تعديل بيانات مورد",
   "address": "العنوان",
-  "egp": "جنيه مصري",
+  "egp": "جنيه",
   "name_is_required": "الإسم مطلوب",
   "phone_is_required": "رقم الهاتف مطلوب",
-  "address_is_required": "العنوان مطلوب"
+  "address_is_required": "العنوان مطلوب",
+  "add_new_product": "إضافة صنف جديدة",
+  "product_name": "إسم الصنف",
+  "main_unit": "الوحدة الرئيسية",
+  "sub_unit": "الوحدة الفرعية",
+  "sub_unit_qty_to_main_unit": "عدد الوحدات الفرعية في الوحدة الرئيسية",
+  "sub_unit_price": "سعر الوحدة الفرعية",
+  "unit_price": "سعر الوحدة",
+  "supplier": "المورد",
+  "price": "السعر",
+  "expiry_date": "تاريخ الإنتهاء",
+  "quantity": "الكمية",
+  "expiry_date_required": "من فضلك اختر تاريخ الإنتهاء",
+  "supplier_required": "من فضلك اختر المورد",
+  "unit_required": "من فضلك اختر الوحدة"
 }
