--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -89,5 +89,23 @@
   "quantity": "الكمية",
   "expiry_date_required": "من فضلك اختر تاريخ الإنتهاء",
   "supplier_required": "من فضلك اختر المورد",
-  "unit_required": "من فضلك اختر الوحدة"
+  "unit_required": "من فضلك اختر الوحدة",
+  "create_sales_bill": "إنشاء فاتورة بيع",
+  "create_bill": "إنشاء فاتورة",
+  "collecting": "تحصيل",
+  "add_items": "أضف أصناف",
+  "search_item": "إبحث عن صنف",
+  "total": "الإجمالي",
+  "total_bill": "إجمالي الفاتورة",
+  "previous_inDebt_amount": "المديونية السابقة",
+  "enter_paid_amount": "أدخل المبلغ المدفوع",
+  "add_attachment": "إضافة مرفقات",
+  "are_you_sure_to_delete": "هل أنت متأكد من حذف",
+  "please_enter_paid_amount": "من فضلك أدخل مبلغ التحصيل",
+  "are_you_sure_to_collect_money": "هل أنت متأكد من تحصيل مبلغ",
+  "product_already_exists" : "هذا الصنف مضاف بالفعل",
+  "quantity_is_required": "أدخل الكمية",
+  "price_is_required": "أدخل السعر",
+  "you_cannot_sell_more_than_store_quantity": "عذرا، لايمكنك البيع اكثر من الكمية المتاحة بالمخزن.",
+  "warning": "تنبيه"
 }
